[package]
name = "wasm-check"
version = "0.1.0"
edition = "2021"
description = "Check WebAssembly browser support"
repository = "https://github.com/jrmsdev/wasm-check"
license = "bsd"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[dependencies]
wasm-bindgen = "0.2.93"

[dependencies.web-sys]
version = "0.3.70"
features = ["console"]

[lib]
crate-type = ["cdylib", "rlib"]
